tests/baselines/reference/parserMemberAccessorDeclaration2(target=es2015).errors.txt
parserMemberAccessorDeclaration2.ts(2,7): error TS2378: A 'get' accessor must return a value.


==== parserMemberAccessorDeclaration2.ts (1 errors) ====
    class C {
      get "b"() { }
          ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }